<resources>
    <string name="app_name" translatable="false">Owl ChatStory</string>

    <string name="common_login">Login</string>
    <string name="common_history">History</string>
    <string name="common_delete">Delete</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_ok">Ok</string>
    <string name="common_about">About</string>
    <string name="common_facebook">Facebook</string>
    <string name="common_twitter">Twitter</string>
    <string name="common_settings">Settings</string>
    <string name="common_share">Share</string>
    <string name="common_over">Over</string>
    <string name="common_feedback">Feedback</string>
    <string name="common_network_error">Network error. Tap to load again.</string>
    <string name="common_slogan">Make Reading More Funny</string>
    <string name="common_empty">Nothing found here~</string>
    <string name="common_directory">Directory</string>
    <string name="common_next">Continue Reading</string>
    <string name="common_continue">To be continued</string>
    <string name="common_create">Creation</string>
    <string name="common_preview">Preview</string>
    <string name="common_update">Update</string>
    <string name="common_star">Stared</string>
    <string name="common_purchased">Purchased</string>
    <string name="common_withdraw">Withdraw</string>
    <string name="common_finished">Finished</string>

    <string name="feedback_app_version">Version V%1$s</string>
    <string name="feedback_message">"DeviceModel:%1$s\r\nSystemVersion:%2$s\r\n-------------------\r\n"</string>
    <string name="feedback_no_email_installed_txt">No email application detected.</string>

    <string name="main_tab_home">Home</string>
    <string name="main_tab_account">Me</string>
    <string name="main_exit_confirm">Tap to exit</string>

    <string name="user_info_title">Me</string>
    <string name="user_vip">VIP</string>
    <string name="user_history">Readed</string>
    <string name="user_writers">Writers</string>
    <string name="user_vip_status">Super Vip</string>

    <string name="login_failed">Log in failed</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="login_agreed">By signing up, you agree to our</string>
    <string name="login_agreed_privacy">Privacy Policy</string>
    <string name="login_out">Log out</string>
    <string name="login_needed">Tap to Log in</string>

    <string name="update_title">Check for update</string>
    <string name="update_cancel">Not Now</string>
    <string name="update_ok">Update Now</string>
    <string name="update_force_to_update">Suggest you update to the latest, unless you may not use it correctly</string>

    <string name="chapter_total_chapters">Total %1$d chapters</string>
    <string name="chapter_num">No.%1$d %2$s</string>

    <string name="read_click_tips">Try to click me</string>
    <string name="read_please_update">Please update</string>
    <string name="read_update_feedback">We have received your request, just keep patient~</string>

    <string name="share_content">I find a good chat-fiction app, let\'s enjoy reading</string>

    <!--new added-->
    <string name="create_publish_chapter">Sure to release current content? Readers will see it after we review it.</string>
    <string name="create_save_chapter">Sure to save current content? Saved to the local only, you can release it later.</string>
    <string name="create_delete_chapter">Sure to delete current content? Cann\'t be found later.</string>
    <string name="create_offline_fiction">Sure to offline current content? Readers will not see it.</string>
    <string name="create_dialog_cancel">Not now</string>
    <string name="create_dialog_ok">Yes</string>
    <string name="create_dialog_not_save">Discard it</string>
    <string name="create_title">Title</string>
    <string name="create_title_hint">Input title(20 characters limits)</string>
    <string name="create_summary">Summary</string>
    <string name="create_summary_hint">Input summary(50 characters limits)</string>
    <string name="create_choose_category">Choose category</string>
    <string name="create_choose_language">Choose language</string>
    <string name="create_choose_single_or_serials">Choose create type</string>
    <string name="create_single">Create short story</string>
    <string name="create_single_hint">Short story, only one chapter</string>
    <string name="create_serials">Create serial story</string>
    <string name="create_serials_hint">Serial story, more chapters</string>
    <string name="create_choose_roles">Choose a role</string>
    <string name="create_empty_message">Message cann\'t be empty</string>
    <string name="create_role_name">Role\'s name</string>
    <string name="create_add_chapter">Add chapter</string>

    <string name="creation_detail_offline">Offline</string>
    <string name="creation_detail_online">Online</string>
    <string name="creation_detail_edit">Edit</string>
    <string name="creation_detail_delete">Delete</string>
    <string name="creation_detail_release_failed">Released failed</string>
    <string name="creation_status_reviewing">Reviewing</string>
    <string name="creation_status_released">Released</string>
    <string name="creation_status_offline">Offlined</string>
    <string name="creation_status_creating">Creating</string>
    <string name="creation_status_refused">Refused</string>

    <string name="common_update_info_failed">Update info failed</string>
    <string name="common_update_info_success">Update info successfully</string>
    <string name="common_invalid_info">Incomplete info</string>
    <string name="common_upload_pic_failed">Failed to upload pictures</string>
    <string name="common_get_pic_failed">Failed to get pictures</string>
    <string name="common_get_info_failed">Failed to get datas</string>
    <string name="common_detail">Detail</string>
    <string name="common_reload">Reload</string>
    <string name="common_login_first">Please login first</string>
    <string name="common_send">Send</string>
    <string name="common_add">Add</string>
    <string name="common_choose_from_gallery">Choose from gallery</string>
    <string name="common_choose_from_photos">Take photos</string>
    <string name="common_choose_language">Choose language</string>
    <string name="common_choose_gender">Choose gender</string>
    <string name="common_male">Male</string>
    <string name="common_female">Female</string>
    <string name="common_likes_format">%1$d LIKES</string>
    <string name="common_stars_format">%1$d STARS</string>
    <string name="common_views_format">%1$s VIEWS</string>
    <string name="common_likes">LIKES</string>
    <string name="common_stars">STARS</string>
    <string name="common_views">VIEWS</string>
    <string name="common_update_chapter">Ep. %1$d</string>

    <string name="user_edit_name">Nickname</string>
    <string name="user_edit_name_hint">Input nickname(10 characters limits)</string>
    <string name="user_edit_gender">Choose your gender</string>
    <string name="user_edit_toolbar_title">Edit user info</string>
    <string name="user_vip_toolbar_title">VIP</string>
    <string name="user_vip_not_paid">You are not vip user</string>
    <string name="user_vip_days">Free read for %1$d days</string>
    <string name="user_waitting_share">Share to friends\nGet this chapter free</string>
    <string name="user_waitting_pay">Become VIP\nGet all chapters free</string>
    <string name="user_waitting_watch">Watch video\nGet this chapter free</string>
    <string name="user_waitting_tips">Trick or treat, Waiting</string>
    <string name="user_waitting_or">Or</string>
    <string name="user_vip_questions">Any question ask us:</string>
    <string name="user_vip_facebook_page">Or visit us</string>
    <string name="user_page_title">User Page</string>
    <string name="user_message_title">Message</string>
    <string name="user_vip_week">VIP for 1 week</string>
    <string name="user_vip_1month">VIP for 1 month(no ads)</string>
    <string name="user_vip_3months">VIP for 3 months(no ads)</string>
    <string name="user_vip_year">VIP for 1 year(no ads)</string>
    <string name="user_vip_features">VIP features</string>
    <string name="user_vip_features_detail">1.No ads 2.Read all</string>
    <string name="user_vip_features_open">Open Now</string>
    <string name="user_wallet">Wallet</string>
    <string name="user_invite_friends">Invite friends</string>
    <string name="user_invite_code">Invite code</string>
    <string name="user_about_me">About me</string>
    <string name="user_about_read">About read</string>
    <string name="user_about_other">About other</string>
    <string name="user_daily_task">Daily task</string>

    <string name="search_key_word">Input key word</string>

    <string name="message_liked">%1$s liked your《%2$s》.</string>
    <string name="message_stared">Your star《%1$s》has updated No.%2$d：%3$s</string>
    <string name="message_pray_update">%1$s asked you to update《%2$s》.</string>
    <string name="message_rejected">Your《%1$s》No.%2$d %3$s has been rejected because of %4$s.</string>
    <string name="message_online">Your《%1$s》No.%2$d %3$s passed.</string>

    <string name="coin_exchange_question">什么是金币</string>
    <string name="coin_exchange_introduce1">1.金币是平台为了奖励用户推出的一种虚拟货币，用户可通过创作小说、分享文章、邀请好友等途径获得</string>
    <string name="coin_exchange_introduce2">2.金币积累到一定额度可向平台申请兑换成等价货币，可提现</string>
    <string name="coin_exchange_introduce3">3.100金币＝1美金，提现金额不小于100美金。</string>
    <string name="coin_getted">您有金币到账啦</string>
    <string name="coin_add_format">+%1$d金币</string>

    <string name="invite_friend_content1">邀请好友下载Owl ChatStory，登录后填写你的邀请码，你就可以获得50金币喔</string>
    <string name="invite_friend_content2">额，邀请码怎么填写啊</string>
    <string name="invite_friend_content3">下载APP，登录后去"我的"页面，"填写邀请码"模块进行填写即可喔</string>
    <string name="invite_friend_content4">填了有什么好处么</string>
    <string name="invite_friend_content5">填写之后你和被邀请好友均可获得相应的金币奖励，可提现的喔</string>
    <string name="invite_now">Invite now</string>
    <string name="invite_my_code">My invite code</string>
    <string name="invite_input_code_hint">Input invite code, get O-coins</string>
    <string name="invite_code_hint">Input invite code</string>
    <string name="invite_input_code_ok">OK</string>
    <string name="invite_input_code_cancel">Cancel</string>
    <string name="invite_input_code_error">No such invite code</string>

    <string name="daily_task_login">每日登录，打开APP领取</string>
    <string name="daily_task_create">每日创作，创作一章小说并审核通过</string>
    <string name="daily_task_share">每日分享，分享APP给你的好友</string>
    <string name="daily_task_read">每日阅读，连续阅读5章小说</string>
</resources>
