<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/create_cover_img"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="16dp"
                    android:background="@mipmap/create_default_cover"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_gray_pressed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:text="@string/create_title"
                        android:textColor="@color/common_text_color" />

                    <EditText
                        android:id="@+id/create_title_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/create_title_hint"
                        android:maxLength="20"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_gray_pressed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/create_summary"
                        android:textColor="@color/common_text_color" />

                    <EditText
                        android:id="@+id/create_description_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/create_summary_hint"
                        android:maxLength="50"
                        android:paddingTop="16dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_gray_pressed" />

                <RelativeLayout
                    android:id="@+id/create_category_choose_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:text="@string/create_choose_category"
                        android:textColor="@color/common_text_color" />

                    <TextView
                        android:id="@+id/create_category_choose_txv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:drawablePadding="6dp"
                        android:drawableRight="@mipmap/ic_goto"
                        android:text="" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_gray_pressed" />

                <RelativeLayout
                    android:id="@+id/create_language_choose_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="16dp"
                        android:text="@string/create_choose_language"
                        android:textColor="@color/common_text_color" />

                    <TextView
                        android:id="@+id/create_language_choose_txv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="16dp"
                        android:drawablePadding="6dp"
                        android:drawableRight="@mipmap/ic_goto"
                        android:text="" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="16dp"
                    android:background="@color/common_gray_pressed" />

                <LinearLayout
                    android:id="@+id/create_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="@string/create_choose_single_or_serials"
                        android:textColor="@color/common_text_color" />


                    <TextView
                        android:id="@+id/create_single_txv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/common_red_btn_selector"
                        android:gravity="center"
                        android:text="@string/create_single"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/create_single_hint"
                        android:textColor="@color/common_text_color" />

                    <TextView
                        android:id="@+id/create_serialized_txv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/common_red_btn_selector"
                        android:gravity="center"
                        android:text="@string/create_serials"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/create_serials_hint"
                        android:textColor="@color/common_text_color" />
                </LinearLayout>

                <TextView
                    android:id="@+id/create_update_fiction_txv"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_red_btn_selector"
                    android:gravity="center"
                    android:text="@string/common_update"
                    android:textColor="#ffffff"
                    android:visibility="gone" />

            </LinearLayout>

        </ScrollView>

        <include layout="@layout/common_loading_layout" />
    </FrameLayout>
</LinearLayout>