<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/pay_close_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vector_close_black" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/share_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/common_black_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:text="@string/user_waitting_tips"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/waiting_count_txv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="50s"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_waitting_or"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@mipmap/default_logo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/pay_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/common_red_btn_selector"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/user_waitting_pay"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/watch_video_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/common_red_btn_selector"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/user_waitting_watch"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/common_red_btn_selector"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/user_waitting_share"
        android:textColor="#ffffff" />

</LinearLayout>