<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="26dp"
                android:background="@mipmap/common_coin_big" />

            <TextView
                android:id="@+id/gift_income_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="0"
                android:textColor="@color/common_text_color"
                android:textSize="30sp" />

            <Button
                android:id="@+id/gift_income_exchange_diamonds_btn"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:background="@drawable/common_red_btn_selector"
                android:text="@string/common_withdraw"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/gift_income_exchange_cash_btn"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@drawable/common_red_btn_selector"
                android:text="兑换VIP"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/coin_exchange_question"
                android:textColor="@color/common_text_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/coin_exchange_introduce1"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/coin_exchange_introduce2"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/coin_exchange_introduce3"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>