<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="156dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/read_over_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/read_over_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/read_aside_bg"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp"
            android:text="@string/common_over"
            android:textColor="#99000000"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/read_share_txv"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/common_red_btn_selector"
                android:gravity="center"
                android:text="@string/common_share"
                android:textColor="#ffffff"
                android:visibility="visible" />

            <TextView
                android:id="@+id/read_next_txv"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:background="@drawable/common_red_btn_selector"
                android:gravity="center"
                android:text="@string/common_next"
                android:textColor="#ffffff"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>